# abalone

./: .gitignore  API spec.txt  README.md  TODO  abalone-hs.cabal  abalone.hs  abalone_tests.hs  db schema
elm/: abalone.elm  elm.js  hex.elm  main.elm  misc.elm  model.elm  player.elm  state.elm  view.elm
fe2/: LICENSE  Makefile  gulpfile.js  package.json
fe2/abalone-js/: .gitignore  Gruntfile.js  abalone.css  abalone.d.ts  abalone.js  bower.json  package.json  tsd.json
fe2/abalone-js/example/: local.html
fe2/abalone-js/test/: hexTests.ts  test.html
fe2/abalone-js/typings/: tsd.d.ts
fe2/html/: index.html
fe2/js/: app.jsx  flux.jsx  leaderboard.jsx  linkhandler.js  loading.jsx  main.js  play.jsx  replay.jsx  upload.jsx  viewGame.jsx
fe2/js/pages/: home.jsx  notfound.jsx
fe2/js/views/: nav.jsx  page.jsx
fe2/less/: bundle.less
frontend/: Gruntfile.js  abalone.css  abalone.js  bower.json  index.html  local.html  local_small.html  main.html  package.json  remote.html  replay.html  tsd.json  tslint.json
frontend/example/: local_small.html  remote.html  replay.html
frontend/src/: abalone.ts  hex.ts  main.ts  renderer.ts
frontend/src/engine/: board.ts  game.ts  hex.ts  move.ts  segment.ts
frontend/src/frontend/: gameReplayer.ts
frontend/src/jsx/: world.jsx
frontend/test/: abaloneTests.ts  coverage.html  hexTests.ts  rendererTests.ts  test.html
frontend/typings/: tsd.d.ts
game-frontend/: abalone.d.ts  package.json
game-frontend/example/: a_game.json  main.js
go/: .gitignore  Makefile  relay.go
go/Godeps/: Godeps.json
go/abalone/: abalone.go  board.go  board_test.go  direction.go  game.go  game_test.go  hex.go  hexSet.go  hexSet_test.go  move.go  move_test.go  outcome.go  play.go  player.go  player_test.go  segment.go  segment_test.go
go/ai/: ai.go
go/api/: common_db_fields.go  match.go  models.go  move_request.go  player.go  record.go  services.go  user.go  victory.go
go/cmd/: Makefile
go/db/: Makefile  db.go  db_test.go  dbconf.yml
go/example/: README.md  main.go
go/game/: board.go  board_test.go  direction.go  hex.go  hexSet.go  hexSet_test.go  move.go  move_test.go  outcome.go  player.go  player_test.go  segment.go  segment_test.go  state.go  state_test.go
go/gamecenter/: Dockerfile  backend_test.go  router_test.go
go/leaderboard/: leaderboard.go  leaderboard_test.go
go/operator/: operator.go  operator_test.go  player_process.go  port_scheduler.go  port_scheduler_test.go  remote_player_instance.go
go/quickstart/: quickstart.go
go/rankings/: rankings.go  rankings_test.go
go/relay/: relay.go
go/router/: router.go  router_test.go
hs/: README.md  abalone-hs.cabal
hs/src/: abalone.hs  client.hs  gameOperator.hs  remotePlayer.hs  server.hs
hs/src/html/: index.html
hs/test/: tests.hs
ops/: Makefile  README.md  TODO  ansible.cfg  app.yml  hosts
ops/playbooks/: frontend_deploy.yml  httpd_deploy.yml  localhost_bootstrap.yml
src/: abalone.hs  abalone_tests.hs  game.hs  player.hs
test/: tests.hs
unsupported/elm/: hex.elm  main.elm  player.elm
unsupported/hs/: LICENSE
(+141 files in other folders)
