name:           abalone-hs
version:        0.1.0.0
synopsis:       Board game engine
description:    Abalone engine for AI competition
homepage:       github.com/danmane/abalone-hs
license:        MIT
license-file:   LICENSE
author:         Daniel Mané
maintainer:     danmane@gmail.com
copyright:      2014, Dan Mané
category:       Game
build-type:     Simple
cabal-version:  >=1.10

executable abalone-hs
  ghc-options:        -rtsopts -O0
  main-is:            server.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:      base >=4.7 && <4.8, 
                      scotty, 
                      wai-extra,
                      transformers,
                      containers >= 0.5.5.1,
                      aeson >= 0.8.0.2,
                      wreq >= 0.3.0.1,
                      text >= 1.2.0.3,
                      lens >= 4.7,
                      lens-aeson >= 1.0.0.3


  hs-source-dirs:     src
  default-language:   Haskell2010

library
  ghc-options:        -O0
  exposed-modules:    Abalone, Player
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && <4.8, 
                      containers >= 0.5.5.1,
                      aeson >= 0.8.0.2

test-suite tests
  ghc-options:        -O0
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && <4.8, 
                      containers >= 0.5.5.1,
                      tasty >= 0.10.1, 
                      tasty-hunit, 
                      aeson >= 0.8.0.2,
                      abalone-hs
